# GLOW

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile.glowbasic  Makefile.glowdriver  PlotSolarZenithAngle.py  README.md  README.rst  ReleaseNotes.rst  RunGlow.py  bands.f90  basic.f90  basic_drv.f90  cglow.f90  ephoto.f90  etrans.f90  exsect.f  fieldm.f  gchem.f90  glow.f90  glowbasic.f90  glowdriver.f90  iri90.f  mzgrid.f90  nrlmsise00.f  output.f90  pyproject.toml  rcolum.f90  readtgcm.f90  rout.f90  setup.cfg  setup.py  snoem.f90  snoemint.f90  solzen.f90  ssflux.f90  tzgrid.f90
glowiono/: __init__.py  plots.py
mpicdf/: CMakeLists.txt
reference/: aur.basic.out  aur981.basic.out
src/: CMakeLists.txt  basic.f90  conduct.f90  egrid.f90  exsect.f  gchem.f90  gchem_grubbs.f  glowbasic.f90  iri90.f  maxt.f90  mzgrid.f90  readtgcm.f90  rout.f90  snoem.f90  ssflux.f90  tzgrid.f90
tests/: test_all.py  test_fortran.py
